Fix invisible links
https://github.com/chamilo/chamilo-lms/commit/8b3d27dc41a26fbdfa094a504cf31b1eb6ae8db2

--- a/app/Resources/public/css/scorm.css
+++ b/app/Resources/public/css/scorm.css
@@ -463,7 +463,7 @@ See https://support.chamilo.org/issues/6976
     border-right: 1px solid #e6e6e6;
 }
 .scorm_item_normal.scorm_highlight a{
-    color: #FFFFFF;
+    /* color: #FFFFFF; This makes link invisible */
 }
 /* END LP VIEW COLLAPSE */
 /* Small devices (tablets, 768px and up) */
